--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "MCAAngularKT": {
+    "AngularKT": {
       "projectType": "application",
       "schematics": {},
       "root": "",
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/MCAAngularKT",
+            "outputPath": "dist/AngularKT",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -24,9 +24,13 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "src/styles.css",
+              "./node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
-            "scripts": []
+            "scripts": [
+              "./node_modules/jquery/dist/jquery.min.js",
+              "./node_modules/bootstrap/dist/js/bootstrap.min.js"
+            ]
           },
           "configurations": {
             "production": {
@@ -62,18 +66,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "MCAAngularKT:build"
+            "browserTarget": "AngularKT:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "MCAAngularKT:build:production"
+              "browserTarget": "AngularKT:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "MCAAngularKT:build"
+            "browserTarget": "AngularKT:build"
           }
         },
         "test": {
@@ -110,15 +114,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "MCAAngularKT:serve"
+            "devServerTarget": "AngularKT:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "MCAAngularKT:serve:production"
+              "devServerTarget": "AngularKT:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "MCAAngularKT"
+  "defaultProject": "AngularKT"
 }
